Font Size and Font Style Changed

--- a/main.html
+++ b/main.html
@@ -66,7 +66,12 @@
         <h1 class="heading-1">NFT for every</h1>
       </div>
       <div class="hero-heading2">
-        <h1 class="heading-2">Celebration of your <br class="pa"/>Company</h1>
+        <h1 class="heading-2">Celebration of your</h1>
+</div>
+
+          <div class="hero-heading2">
+            <h1 class="heading-1">
+          Company</h1>
       </div>
       <div class="hero-heading2">
         <h4 class="heading-3">
